--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -56,7 +56,6 @@ a.try_free:hover, a.try_free:focus {
   border-color: var(--primary-color, #455ef9);
   box-shadow: var(--shadow, 0 10px 20px 0 rgba(4,23,118,0.3)) !important;
 }
-/* article.article h3 span {font-weight: 300;} */
 article.article h3 span .yellowbg {
   bottom: -2px;
   left: 0px;
@@ -131,10 +130,13 @@ header .header_category li ul.drop_down_menu li > a:hover, header ul li.drop_dow
   fill: var(--primary-color,#2b4eff);
   color: var(--primary-color,#2b4eff);
 }
-header .header_category .header_category-icon {
+header .header_category .header_category-icon{
   width: 15px;
   margin-right: 10px;
+  color:black;
+
 }
+
 header ul li ul.drop_down_menu {
   left: 0px;
   width: 200px;
@@ -296,3 +298,588 @@ header .toggle-btn.toggle::before {width: 10px;}
 header .toggle-btn.toggle span {width: 20px;}
 header a.try_free {white-space: nowrap;}
 
+
+
+/* MAIN CSS START */
+
+
+
+.hero__height {
+  min-height: 950px;
+}
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .hero__height {
+    min-height: 850px;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .hero__height {
+    min-height: 750px;
+  }
+}
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+  .hero__height {
+    min-height: 1100px;
+  }
+}
+@media (max-width: 575px) {
+  .hero__height {
+    min-height: 850px;
+  }
+}
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+  .hero__height-2 {
+    min-height: 1350px;
+  }
+}
+@media (max-width: 575px) {
+  .hero__height-2 {
+    min-height: 850px;
+  }
+}
+.main_up_title {
+  font-size: 60px;
+  line-height: 1;
+}
+@media only screen and (min-width: 1200px) and (max-width: 1399px) {
+  .main_up_title {
+    font-size: 55px;
+  }
+}
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .main_up_title {
+    font-size: 45px;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .main_up_title {
+    font-size: 35px;
+  }
+}
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+  .main_up_title {
+    font-size: 50px;
+  }
+}
+@media (max-width: 575px) {
+  .main_up_title {
+    font-size: 30px;
+  }
+}
+.main_up_title span:first-child {
+  font-weight: 300;
+  display: block;
+}
+.main_up_title span.yellow-shape {
+  position: relative;
+  z-index: 1;
+}
+.main_up_title span.yellow-shape img {
+  position: absolute;
+  bottom: 1px;
+  left: -1px;
+  z-index: -1;
+  -webkit-animation: section-animation 3s infinite;
+  animation: section-animation 3s infinite;
+}
+.main_up button{
+  cursor: pointer;
+  width: 137px;
+  height: 54px;
+}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .main_up_title span.yellow-shape img {
+    bottom: 12px;
+    height: 40% !important;
+  }
+}
+.main_up_title-2 {
+  margin-bottom: 20px;
+}
+.main_up p {
+  font-size: 22px;
+  color: #0e1133;
+  padding-right: 130px;
+  line-height: 30px;
+  margin-bottom: 28px;
+}
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .main_up p {
+    padding-right: 30px;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .main_up p {
+    padding-right: 0px;
+  }
+}
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+  .main_up p {
+    padding-right: 0px;
+  }
+}
+@media (max-width: 575px) {
+  .main_up p {
+    padding-right: 0px;
+  }
+}
+.main_up-2 h4 {
+  font-size: 22px;
+  margin-bottom: 0;
+}
+.main_up-2 p {
+  color: #53545b;
+  font-size: 16px;
+  margin-bottom: 37px;
+}
+.main_up_thumb {
+  z-index: 1;
+}
+.main_up_thumb-big {
+  position: relative;
+}
+.main_up_thumb-big img {
+  max-width: 400px;
+  max-height: 460px;
+  -webkit-border-radius: 40px 4px 40px 4px;
+  -moz-border-radius: 40px 4px 40px 4px;
+  border-radius: 40px 4px 40px 4px;
+  -webkit-box-shadow: 0px 30px 60px 0px rgba(1, 11, 60, 0.14);
+  -moz-box-shadow: 0px 30px 60px 0px rgba(1, 11, 60, 0.14);
+  box-shadow: 0px 30px 60px 0px rgba(1, 11, 60, 0.14);
+}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .main_up_thumb-big img {
+    width: 100%;
+  }
+}
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+  .main_up_thumb-big img {
+    margin-top: 50px;
+    width: 100%;
+  }
+}
+@media (max-width: 575px) {
+  .main_up_thumb-big img {
+    margin-top: 50px;
+    width: 100%;
+  }
+}
+@media only screen and (min-width: 1200px) and (max-width: 1399px) {
+  .main_up_thumb-sm {
+    margin-left: -60px;
+  }
+}
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .main_up_thumb-sm {
+    margin-left: -160px;
+    margin-top: -95px;
+  }
+}
+@media (min-width: 992px) {
+  .d-lg-block {
+    display: block !important;
+    margin-left: 33px;
+    margin-top: 52px;
+}
+  }
+.main_up_thumb-sm img {
+  max-width: 200px;
+  max-height: 240px;
+  -webkit-border-radius: 4px 40px 4px 40px;
+  -moz-border-radius: 4px 40px 4px 40px;
+  border-radius: 4px 40px 4px 40px;
+  -webkit-box-shadow: 0px 30px 60px 0px rgba(1, 11, 60, 0.14);
+  -moz-box-shadow: 0px 30px 60px 0px rgba(1, 11, 60, 0.14);
+  box-shadow: 0px 30px 60px 0px rgba(1, 11, 60, 0.14);
+}
+.main_up_thumb-shape img {
+  position: absolute;
+  z-index: -1;
+}
+.main_up_thumb-shape img.hero-1-dot {
+  bottom: -25px;
+  top: 620px;
+  left: 745px;
+  -webkit-animation: hero-dot-1 5s linear 0s infinite alternate;
+  -moz-animation: hero-dot-1 5s linear 0s infinite alternate;
+  -o-animation: hero-dot-1 5s linear 0s infinite alternate;
+  animation: hero-dot-1 5s linear 0s infinite alternate;
+}
+.main_up_thumb-shape img.hero-1-circle-3 {
+  bottom: -47px;
+  right: 13%;
+  top: 59%;
+}
+.main_up_thumb-shape img.hero-1-circle-4 {
+  top: 193px;
+  right: 15%;
+}
+.main_up_thumb-2 {
+  position: relative;
+  z-index: 1;
+}
+@media only screen and (min-width: 1200px) and (max-width: 1399px) {
+  .main_up_thumb-2 img.hero-big {
+    width: 100%;
+  }
+}
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .main_up_thumb-2 img.hero-big {
+    width: 100%;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .main_up_thumb-2 img.hero-big {
+    width: 100%;
+  }
+}
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+  .main_up_thumb-2 img.hero-big {
+    width: 100%;
+  }
+}
+@media (max-width: 575px) {
+  .main_up_thumb-2 img.hero-big {
+    width: 100%;
+  }
+}
+.main_up_thumb-2 img.hero-shape-purple {
+  position: absolute;
+  left: 0;
+  bottom: 19%;
+  z-index: -1;
+}
+@media only screen and (min-width: 1200px) and (max-width: 1399px) {
+  .main_up_thumb-2 img.hero-shape-purple {
+    width: 100%;
+  }
+}
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .main_up_thumb-2 img.hero-shape-purple {
+    width: 100%;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .main_up_thumb-2 img.hero-shape-purple {
+    width: 100%;
+  }
+}
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+  .main_up_thumb-2 img.hero-shape-purple {
+    width: 100%;
+  }
+}
+@media (max-width: 575px) {
+  .main_up_thumb-2 img.hero-shape-purple {
+    width: 100%;
+  }
+}
+.hero__quote {
+  position: absolute;
+  bottom: 60px;
+  right: -200px;
+  padding: 15px 25px;
+  padding-bottom: 20px;
+  background: #ffffff;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-shadow: 0px 30px 60px 0px rgba(1, 11, 60, 0.14);
+  -moz-box-shadow: 0px 30px 60px 0px rgba(1, 11, 60, 0.14);
+  box-shadow: 0px 30px 60px 0px rgba(1, 11, 60, 0.14);
+}
+@media only screen and (min-width: 1200px) and (max-width: 1399px) {
+  .hero__quote {
+    right: -145px;
+  }
+}
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .hero__quote {
+    right: 60px;
+    bottom: -50px;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .hero__quote {
+    right: 30px;
+    bottom: -50px;
+  }
+}
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+  .hero__quote {
+    right: 30px;
+    bottom: -50px;
+  }
+}
+@media (max-width: 575px) {
+  .hero__quote {
+    right: 15px;
+    bottom: -50px;
+  }
+}
+.hero__quote span {
+  font-size: 14px;
+  color: #474956;
+}
+.hero__quote h4 {
+  font-size: 16px;
+  font-weight: 600;
+  margin-bottom: 0;
+  line-height: 1;
+}
+.hero__quote-animation {
+  animation-duration: 2.5s;
+  animation-fill-mode: both;
+  animation-iteration-count: infinite;
+  animation-name: hero-bounce;
+}
+.main_up_shape img {
+  position: absolute;
+
+}
+.main_up_shape img.hero-1-circle {
+  top: 25%;
+  left: 5%;
+  -webkit-animation: hero-circle-1 6s linear 0s infinite alternate;
+  -moz-animation: hero-circle-1 6s linear 0s infinite alternate;
+  -o-animation: hero-circle-1 6s linear 0s infinite alternate;
+  animation: hero-circle-1 6s linear 0s infinite alternate;
+}
+.main_up_shape img.hero-1-circle-2 {
+  bottom: 29%;
+  left: 0;
+  top: 59%;;
+}
+.main_up_shape img.hero-1-dot-2 {
+  right: 0;
+  bottom: 38%;
+  margin-bottom: -98px;
+
+}
+.hero__search-input {
+  position: relative;
+  width: 370px;
+}
+@media (max-width: 575px) {
+  .hero__search-input {
+    width: 100%;
+  }
+}
+.hero__search-input input {
+  width: 100%;
+  height: 54px;
+  line-height: 54px;
+  padding: 0 24px;
+  padding-right: 35px;
+  font-size: 14px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  outline: none;
+  border: none;
+}
+.hero__search-input input::placeholder {
+  color: #8d8e9a;
+}
+.hero__search-input button {
+  position: absolute;
+  top: 50%;
+  right: 24px;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  font-size: 18px;
+  background: transparent;
+}
+.hero__search-input button i::after {
+  color: #0e1133;
+  opacity: 1;
+}
+.hero__search-input button i::before {
+  color: #8c8faa;
+}
+.hero__search p {
+  font-size: 16px;
+  color: #6d6e75;
+}
+.hero__promotion {
+  position: absolute !important;
+  left: -7% !important;
+  top: 44% !important;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-shadow: 0px 30px 60px 0px rgba(1, 11, 60, 0.14);
+  -moz-box-shadow: 0px 30px 60px 0px rgba(1, 11, 60, 0.14);
+  box-shadow: 0px 30px 60px 0px rgba(1, 11, 60, 0.14);
+  padding: 15px 20px;
+  padding-bottom: 10px;
+}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .hero__promotion {
+    left: 20% !important;
+    top: 71% !important;
+  }
+}
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+  .hero__promotion {
+    left: 9% !important;
+    top: 71% !important;
+  }
+}
+@media (max-width: 575px) {
+  .hero__promotion {
+    left: 9% !important;
+    top: 52% !important;
+  }
+}
+.hero__promotion.education {
+  bottom: 28% !important;
+  top: auto !important;
+  left: -11% !important;
+}
+.hero__promotion-icon span {
+  display: inline-block;
+  width: 36px;
+  height: 36px;
+  text-align: center;
+  line-height: 36px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  background: #ff7921;
+}
+.hero__promotion-icon span svg {
+  height: 24px;
+  fill: #ffffff;
+}
+.hero__promotion-icon span.cap {
+  background: #5773ff;
+}
+.hero__promotion-text h5 {
+  font-size: 16px;
+  margin-bottom: 0;
+}
+.hero__promotion-text p {
+  font-size: 14px;
+  color: #474956;
+  margin-bottom: 0;
+}
+.hero__class {
+  position: absolute;
+  left: auto !important;
+  top: auto !important;
+  bottom: 33%;
+  right: -12%;
+  -webkit-box-shadow: 0px 30px 60px 0px rgba(1, 11, 60, 0.14);
+  -moz-box-shadow: 0px 30px 60px 0px rgba(1, 11, 60, 0.14);
+  box-shadow: 0px 30px 60px 0px rgba(1, 11, 60, 0.14);
+  background: rgba(255, 255, 255, 0.9);
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  padding: 20px;
+}
+@media only screen and (min-width: 1200px) and (max-width: 1399px) {
+  .hero__class {
+    right: -5%;
+  }
+}
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .hero__class {
+    right: 1%;
+    bottom: 15%;
+  }
+}
+.hero__class-thumb img {
+  width: 34px;
+  height: 34px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+}
+.hero__class-text h5 {
+  font-size: 16px;
+  margin-bottom: 0;
+}
+.hero__class-text p {
+  font-size: 14px;
+  color: #474956;
+  margin-bottom: 0;
+}
+.hero__class-text a {
+  display: inline-block;
+  height: 30px;
+  line-height: 30px;
+  text-align: center;
+  color: #ffffff;
+  font-weight: 500;
+  padding: 0 15px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  background: #e233fb;
+}
+.hero__mic {
+  position: absolute;
+  top: 30%;
+  right: 10%;
+  animation-duration: 2.5s;
+  animation-fill-mode: both;
+  animation-iteration-count: infinite;
+  animation-name: hero-bounce;
+}
+.hero__mic span {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  background: #ff3c4e;
+  -webkit-box-shadow: 0px 14px 30px 0px rgba(131, 2, 14, 0.2);
+  -moz-box-shadow: 0px 14px 30px 0px rgba(131, 2, 14, 0.2);
+  box-shadow: 0px 14px 30px 0px rgba(131, 2, 14, 0.2);
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
+}
+.hero__mic span svg {
+  height: 28px;
+  fill: #ffffff;
+}
+
+@keyframes hero-dot-1 {
+  0% {
+    transform: translateY(-100px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+@keyframes hero-bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
+}
+@keyframes hero-circle-1 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
