--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -770,5 +770,90 @@ header a.try_free {white-space: nowrap;}
 }
 
 
-
+.banner-item {
+	padding: 50px 40px;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	margin-top: -60px;
+  }
+  .category-area{
+	margin-bottom: 72px;
+	margin-top: -100px;
+  }
+  
+  .banner-item span {
+	font-size: 14px;
+	font-weight: 500;
+	color: #ffffff;
+	background: #fc4389;
+	display: inline-block;
+	height: 20px;
+	line-height: 22px;
+	padding: 0 14px;
+	margin-bottom: 15px;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+	text-transform: capitalize;
+  }
+  .banner-item span.orange {
+	background: #ff652e;
+  }
+  .banner-title {
+	font-size: 26px;
+	margin-top: 43px;
+	margin-bottom: 56px;
+	margin-left: 30px;
+  }
+  .banner-title a:hover {
+	color: #2b4eff;
+  }
+  .banner-thumb {
+	position: absolute;
+	top: 37%;
+	-webkit-transform: translateY(-50%);
+	-moz-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	transform: translateY(-50%);
+	right: 10px;
+	width: 56%;
+	
+  }
+  .banner-content .bn-1{
+	background-image: url(../image/banner-bg-1.jpg);
+  width: 102%;
+	  height: 260px;
+	  border-radius: 4px;
+	
+  }
+  
+  
+  .banner-content .bn-1 .pc-img{
+	margin-left: 32px;
+	margin-top: -21px;
+  }
+  
+  .banner-content .bn-2{
+	background-image: url(../image/banner-bg-2.jpg);
+	width: 100%;
+	height: 250px;
+	
+  }
+  .banner-content .bn-2 .phone-btn{
+	margin-left: 30px;
+	margin-top: -23px;
+  }
+  
+  .banner-thumb-2 {
+	top: 42%;
+  }
+  .banner-content {
+	position: relative;
+	z-index: 1;
+  
+  }
 
