create course header, course-tab and course-carts

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1093,7 +1093,7 @@ header a.try_free {
   transform: scale(1.1);
 }
 
-course__tag .course__item-2 {
+.course__tag .course__item-2 {
   padding: 40px;
 }
 
@@ -2654,6 +2654,14 @@ course__tag .course__item-2 {
   }
 }
 
+@media (min-width: 1400px) {
+  .col-xxl-4 {
+      flex: 0 0 auto;
+      width: 33.33333333%;
+      margin-top: 30px;
+    }
+  }
+
 @media only screen and (min-width: 576px) and (max-width: 767px) {
   .course-shape img.course-dot {
     right: -10px;
@@ -2883,7 +2891,7 @@ h3.price {
 
 
 
-/* start footer */
+
 
 #guide .own_guid_card {
   padding: 2.5rem 5rem;
@@ -2922,6 +2930,8 @@ h3.price {
   box-shadow: var(--shadow);
   color: var(--color, #0e1133);
 }
+
+/* start footer */ 
 
 
 footer {
