--- a/assets/css/course.css
+++ b/assets/css/course.css
@@ -410,7 +410,7 @@
     position: relative;
     z-index: 1;
      
-}
+} 
 
 .area-page .cour{
     margin-top: -200px;
@@ -456,7 +456,7 @@ margin-left: 10px;
     color: white;
 }
 
-
+/* 
 #course-tab.pagination1{
     width: 80%;
     height: 50px;
@@ -530,7 +530,7 @@ margin-left: 10px;
 
  .pagination1 .right-icons i{
  margin-left: 9px;
-}
+}  */
 
 
 
@@ -2150,4 +2150,189 @@ margin-left: 10px;
       right: -10px;
     }
   }
+
+
+
+
+
+  #pagination-end{
+    height: 78px;
+    margin-top: 6%;
+}
+
+
+
+    #pagination-end .pagination-all {
+      margin-bottom: 56px;
+}  
+
+#pagination-end .pagination-all .paginationes{
+
+}
+
+
+
+
+#guide{
+  margin-top: 12%;
+}
+
+
+  #guide .own_guid_card {
+    padding: 2.5rem 5rem;
+    background: #2b4eff;
+    border-radius: 0.5rem;
+    overflow: hidden;
+    margin-top: -5rem;
+    z-index: 3;
+  }
+  
+  #guide .own_guid_card .own_card_content {
+    flex-wrap: wrap;
+  }
+  
+  #guide .own_guid_card .cicle_shape {
+    right: -163px;
+    bottom: -90px;
+  }
+  
+  #guide .own_guid_card h3 {
+    font-size: 2.5rem;
+    margin: 0;
+    color: var(--color-light, #fff);
+    font-weight: 600;
+    z-index: 3;
+  }
+  
+  #guide .own_guid_card .btn {
+    z-index: 2;
+    background: var(--color-light, #fff);
+    padding: 1rem 2.5rem;
+  }
+  
+  #guide .own_guid_card .btn:focus,
+  #guide .own_guid_card .btn:hover {
+    box-shadow: var(--shadow);
+    color: var(--color, #0e1133);
+  }
+  
+  /* start footer */ 
+  
+  
+  footer {
+    padding-top: 13rem;
+    margin-top: -8rem;
+    background: #100741;
+    color: var(--gray-color);
+  }
+  
+  footer p {
+    color: #b9b9b9;
+  }
+  
+  footer a.logo {
+    width: 120px;
+  }
+  
+  footer .icons a {
+    color: var(--gray-color);
+    font-size: 1.2rem;
+    margin: 0 5px;
+    background: var(--btn-color);
+    width: 45px;
+    height: 45px;
+    text-align: center;
+    line-height: 45px;
+    border-radius: 0.3rem;
+    transition: all 0.3s ease-in-out;
+    outline: 2px solid var(--btn-color);
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -ms-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+  }
+  
+  footer .icons a:hover {
+    outline-offset: 3px;
+  }
+  
+  footer h4 {
+    margin-bottom: 1.5rem;
+  }
+  
+  ul.footer_menu li a {
+    margin: 0.2rem 0;
+    color: #b9b9b9;
+  }
+  
+  ul.footer_menu li a:hover {
+    color: var(--color-light, #fff);
+  }
+  
+  ul.footer_menu{
+    list-style: none;
+    margin: 0px;
+    color: white;
+  }
+  
+  footer .footer_bottom {
+    padding: 5px 0;
+    font-size: 13px;
+    border-top: 1px solid #1c1f3f;
+  }
+  
+  footer .footer_bottom a {
+    color: var(--color-light, #fff);
+  }
+  
+  footer form input[type="email"] {
+    padding: 20px 14px;
+    border: none;
+    font-size: 15px;
+    width: 70%;
+    border-radius: 0.3rem 0 0 0.3rem;
+  }
+  
+  footer form button {
+    width: 20%;
+    border: none;
+    color: #fff;
+    display: grid;
+    place-items: center;
+    overflow: hidden;
+    background: #2b4eff;
+    border-radius: 0 0.3rem 0.3rem 0;
+  }
+  
+  footer form button i {
+    transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -ms-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+  }
+  
+  footer form button i:first-child {
+    left: 0;
+    opacity: 0;
+  }
+  
+  footer form button:hover i:first-child {
+    left: 50%;
+    opacity: 1;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+  }
+  
+  footer form button:hover i:last-child {
+    opacity: 0;
+  }
+  
+  footer .con-mt {
+    margin-top: calc(2rem / var(--i, 0));
+  }
+
 
